Fix position of popup on mobile screens

--- a/MessagingClient/wwwroot/css/index.css
+++ b/MessagingClient/wwwroot/css/index.css
@@ -5,7 +5,7 @@
     border: none;
     outline: none;
     border-radius: 50%;
-    right: 50px;
+    right: 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
